# tem-leite-ai-v2

./: README.md  pyproject.toml  run.py
app/: __init__.py  config.py  models.py  routes.py
app/static/css/: animations.css  components.css  main.css
app/static/js/: main.js  utils.js  validation.js
app/templates/: base.html  buscar_doadores.html  cadastrar_doacao.html  caixa_de_entrada.html  chat.html  confirmar_reserva.html  dashboard_doador.html  dashboard_receptor.html  enviar_mensagem.html  enviar_mensagem_doacao.html  index.html  login.html  register.html
instance/: tem_leite_ai.db
