[project]
name = "app-tem-leite-ai-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus",email = "matheusvirgolino0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
